KIK-1932, fix icons alignment

--- a/app/assets/less/layout/_main.less
+++ b/app/assets/less/layout/_main.less
@@ -646,14 +646,6 @@ input[type=search]:-ms-input-placeholder {
 }
 
 
-.stats {
-  .infoarea {
-    .number {
-      padding: 0px 34px 0 0;
-    }
-  }
-}
-
 .modal {
   .modal-content {
     .modal-header {
@@ -4579,6 +4571,9 @@ div[data-percentage],
 	.infoarea {
 		margin: 0;
 		padding: 25px 32px 13px;
+    .number {
+      padding: 0 34px 0 0;
+    }
 	}
 
 	.green {
@@ -4601,7 +4596,7 @@ div[data-percentage],
 		position: relative;
 
 		[class^="icomoon-"], [class*=" icomoon-"] {
-			top: 16px;
+			top: 20px;
 			right: 20px;
 			font-size: 30px;
 			position: absolute;
