--- a/app/containers/StudyPage/styles.less
+++ b/app/containers/StudyPage/styles.less
@@ -193,11 +193,11 @@
       font-size: 29px;
     }
     .icomoon-icon_clock_alt {
-      top: 19px;
+      top: 18px;
       font-size: 35px;
     }
     .icomoon-chat-down {
-      top: 21px;
+      top: 19px;
       font-size: 38px;
     }
   }
